# RubiksCube

./: CMakeLists.txt  README.md  main.cpp  resources.rc
Base/: FileLoader.cpp  FileLoader.h  GLBasic.cpp  GLBasic.h  RCButton.cpp  RCButton.h
GameLogic/: Cube.cpp  Cube.h
working/: button.fs  button.vs  cube.fs  cube.vs
